# MLOps_Labs

./: .gitignore  README.md
.trunk/: trunk.yaml
GCP/: README.md
VertexAI/: prepare_dataset.py
lab01/: README.md  env.yaml  lab01a.ipynb  lab01a_01_tensor_tutorial.ipynb  lab01a_02_autograd_tutorial.ipynb  lab01a_03_neural_networks_tutorial.ipynb  lab01a_04_cifar10_tutorial.ipynb  lab01b.ipynb  lab01c.ipynb  lab01c_sol.ipynb  pyproject.toml
lab02/: README.md  env.yaml  pyproject.toml  streamlit_chatbot.md  streamlit_uis.md
lab02/notebooks/: transformers.ipynb  transformers_solution.ipynb
lab02/snippets/: chatbot_solution.py
lab03/: README.md  diffusion.ipynb  env.yaml  mlflow.ipynb  ray_tune.ipynb  ray_tune_solution.ipynb
lab04/: 01_introduction_to_cicd.md  02_introduction_to_pytest.md  03_testing_models.md  README.md  env.yaml
lab04/deepchecks_advanced/: check_attack.py  test_solution.py  train.py
lab04/deepchecks_intro/: data.py  train.py
lab04/deepchecks_intro/workflows/: deepchecks.yaml
lab04/github_actions_intro/: requirements.txt
lab04/github_actions_intro/workflows/: python_demo.yaml
lab04/pytest/: test_answer.py
lab05/: pyproject.toml
lab05/airflow/: airflow_101.md
lab05/coffee_analytics/: coffee_analytics.ipynb  coffee_analytics_sol.ipynb
lab06/: README.md
lab07/: README.md  env.yaml  mlserver.md  outliers_attacks_drifts.md
lab07/notebooks/: adversarial_attack_detection.ipynb  outlier_detection.ipynb  outlier_detection_solution.ipynb
project/: README.md  create_group.md
