[project]
name = "lab02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab",
    "jupyterlab_widgets",
    "ipywidgets",
    "matplotlib",
    "pytorch-lightning==2.2.0",
    "smart-open==6.4.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "setuptools<82",
    "transformers==4.48.1",
    "wikipedia==1.4.0",
    "streamlit==1.41.1",
]
